Fix image bleed on mobile
Image bleed added -2rem margins to images, but mobile only had 1rem of
empty space, so extra image margins resulted in horizontal scrolling.

--- a/css/default.css
+++ b/css/default.css
@@ -341,13 +341,6 @@ ul {
     list-style-type: circle;
 }
 
-img.bleed {
-    width: calc(100% + 4rem);
-    height: calc(100% + 4rem);
-    margin-left: -2rem;
-    margin-right: -2rem;
-}
-
 p.hakyll-convert-comment-date {
     background-color: #dcd6d3;
 }
