--- a/css/desktop.css
+++ b/css/desktop.css
@@ -7,6 +7,13 @@ body {
     width: 38rem;
 }
 
+img.bleed {
+    width: calc(100% + 4rem);
+    height: calc(100% + 4rem);
+    margin-left: -2rem;
+    margin-right: -2rem;
+}
+
 .content-desktop {
     display: inline;
 }
